@@ -1,7 +1,7 @@
 {
   "$schema": "../../schema/EnvironmentalMonitoringSite.schema.json",
   "@context": "../../context/EnvironmentalMonitorigSite.context.jsonld",
-  "@id": "http://fdri.ceh.ac.uk/id/environmental-monitoring-site/bunny",
+  "@id": "http://fdri.ceh.ac.uk/id/site/bunny",
   "@type": "http://fdri.ceh.ac.uk/vocab/metadata/EnvironmentalMonitoringSite",
   "label": [
     {
@@ -12,9 +12,7 @@
   "type": {
     "@id": "http://fdri.ceh.ac.uk/id/site-type/recharge"
   },
-  "inRegion": [{
-    "@id": "http://fdri.ceh.ac.uk/id/region/south-east"
-  }],
+  "identifier": ["BUNNY"],
   "hasGeometry": [{
     "asWKT": {
       "@value": "<http://www.opengis.net/def/crs/EPSG/0/27700> POINT(123, 456)",
@@ -33,11 +31,11 @@
       "@language": "en"
     }
   ],
-  "soilType": {
-    "@id": "http://fdri.ceh.ac.uk/id/soil-type/mineral-soil"
-  },
   "altitude": {
     "@value": "1.0",
     "@type": "http://www.w3.org/2001/XMLSchema#decimal"
-  }
+  },
+  "hasAnnotation": [
+    {"@id": "http://fdri.ceh.ac.uk/id/site/bunny/annotation/soilType"}
+  ]
 }
